# svod

./: .gitignore  LICENSE  README.md  config.ini  db.py  download_svod.py  opt-mgr.py  optmgr.py  opts.ini  pyproject.toml  requirements.txt  url_sample
svod/: download_svod.py  optmgr.py  postprocess.py
svod/cfg/: config.ini
tests/: test_db.py  test_download.py  test_opts.py
